# amem

./: .pre-commit-config.yaml  CLAUDE.md  README.md  agents.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  docs.yml
src/amem/: __init__.py  container.py  types.py
src/amem/core/: __init__.py  em.py  interfaces.py  memory.py
src/amem/services/: __init__.py  amem_service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_memory.py
